# xsens_node

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: xsens_node.launch  xsens_test.launch
src/: CMakeLists.txt  main.cpp
src/xcommunication/: CMakeLists.txt
src/xstypes/: CMakeLists.txt
